k8s_demo/ingress/next-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: surveybox-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - surveybox.radom-kh.site
      secretName: surveybox-tls
  rules:
    - host: surveybox.radom-kh.site
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-svc
                port:
                  number: 3000
