k8s_demo/ingress/react-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jobfinder-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - jobfinder-k8s.radom-kh.site
      secretName: jobfinder-tls
  rules:
    - host: jobfinder-k8s.radom-kh.site
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jobfinder-svc
                port:
                  number: 80
